[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fart"
version = "0.2.0"
description = "Fart all over your documentation"
readme = "README.rst"
authors = [
    { name = "Evan Cushing", email = "evdcush@protonmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
urls = { "Homepage" = "https://github.com/evdcush/fart" }

[project.scripts]
fart = "fart.fart:main"
